--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <nav id="desktop-nav">
-        <div class="logo">John Doe</div>
+        <div class="logo">SUBHAM KUMAR </div>
         &lt;!-- <button class="theme">Theme</button> --&gt;
         <div>
             <ul class="nav-links">
